--- a/.taskfiles/bootstrap/resources/.sops.tmpl.yaml
+++ b/.taskfiles/bootstrap/resources/.sops.tmpl.yaml
@@ -4,8 +4,11 @@ creation_rules:
     mac_only_encrypted: true
     key_groups:
       - age: []
-  - path_regex: kubernetes/.*\.sops\.ya?ml
+  - path_regex: (bootstrap|kubernetes)/.*\.sops\.ya?ml
     encrypted_regex: "^(data|stringData)$"
     mac_only_encrypted: true
     key_groups:
       - age: []
+stores:
+  yaml:
+    indent: 2
