--- a/kubernetes/apps/storage/snapshot-controller/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/snapshot-controller/app/helmrelease.yaml
@@ -37,6 +37,7 @@ spec:
       retries: 3
   values:
     controller:
+      replicaCount: 2
       resources:
         requests:
           cpu: 10m
