--- a/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
@@ -1,14 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: democratic-csi
-  namespace: storage # Required for Renovate lookups.
 spec:
   interval: 1h
-  timeout: 3m
-  url: https://democratic-csi.github.io/charts
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.14.7
+  url: oci://ghcr.io/onedr0p/charts-mirror/democratic-csi
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +22,9 @@ metadata:
   name: democratic-csi-iscsi
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: democratic-csi
-      version: 0.14.7
-      sourceRef:
-        kind: HelmRepository
-        name: democratic-csi
-        namespace: storage
+  chartRef:
+    kind: OCIRepository
+    name: democratic-csi
   install:
     remediation:
       retries: 3
@@ -33,9 +33,6 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  dependsOn:
-    - name: snapshot-controller
-      namespace: storage
   values:
     controller:
       podAnnotations:
