--- a/kubernetes/apps/storage/democratic-csi/ks.yaml
+++ b/kubernetes/apps/storage/democratic-csi/ks.yaml
@@ -14,6 +14,11 @@ spec:
       namespace: security
     - name: snapshot-controller
       namespace: storage
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: *app
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/storage/democratic-csi/iscsi
   prune: true
@@ -41,6 +46,11 @@ spec:
       namespace: security
     - name: snapshot-controller
       namespace: storage
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: *app
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/storage/democratic-csi/nfs
   prune: true
