--- a/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
@@ -6,14 +6,9 @@ metadata:
   name: democratic-csi-nfs
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: democratic-csi
-      version: 0.14.7
-      sourceRef:
-        kind: HelmRepository
-        name: democratic-csi
-        namespace: storage
+  chartRef:
+    kind: OCIRepository
+    name: democratic-csi
   install:
     remediation:
       retries: 3
@@ -22,9 +17,6 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  dependsOn:
-    - name: snapshot-controller
-      namespace: storage
   values:
     controller:
       podAnnotations:
