--- a/kubernetes/apps/database/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/app/helmrelease.yaml
@@ -1,14 +1,19 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/helmrepository_v1.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: cloudnative-pg
-  namespace: database # Required for Renovate lookups.
 spec:
   interval: 1h
-  timeout: 3m
-  url: https://cloudnative-pg.github.io/charts
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: 0.23.2
+  url: oci://ghcr.io/cloudnative-pg/charts/cloudnative-pg
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -17,14 +22,9 @@ metadata:
   name: cloudnative-pg
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: cloudnative-pg
-      version: 0.23.2
-      sourceRef:
-        kind: HelmRepository
-        name: cloudnative-pg
-        namespace: database
+  chartRef:
+    kind: OCIRepository
+    name: cloudnative-pg
   install:
     remediation:
       retries: 3
