--- a/kubernetes/apps/ai/ollama/ks.yaml
+++ b/kubernetes/apps/ai/ollama/ks.yaml
@@ -10,11 +10,9 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../components/volsync
+    - ../../../../components/pvc
   dependsOn:
     - name: democratic-csi-iscsi
-      namespace: storage
-    - name: volsync
       namespace: storage
   interval: 1h
   path: ./kubernetes/apps/ai/ollama/app
