--- a/.renovate/autoMerge.json5
+++ b/.renovate/autoMerge.json5
@@ -7,7 +7,7 @@
       automerge: true,
       automergeType: "branch",
       matchUpdateTypes: ["digest"],
-      matchPackageNames: ["/home-operations/", "/bjw-s/", "/onedr0p/"],
+      matchPackageNames: ["/home-operations/", "/onedr0p/"],
       ignoreTests: true,
     },
     {
