--- a/kubernetes/apps/database/cloudnative-pg/cluster/postgres16/gatus.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/postgres16/gatus.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-gatus-ep
+  name: postgres16-gatus-ep
   labels:
     gatus.io/enabled: "true"
 data:
