--- a/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
+++ b/kubernetes/apps/database/postgres-backup/app/helmrelease.yaml
@@ -19,7 +19,7 @@ spec:
       retries: 3
   values:
     controllers:
-      postgres16:
+      postgres17:
         annotations: &annotations
           reloader.stakater.com/auto: "true"
         type: cronjob
@@ -29,17 +29,17 @@ spec:
           successfulJobsHistory: 1
           failedJobsHistory: 1
         containers:
-          postgres16-backup:
-            image: &image
+          postgres17-backup:
+            image:
               repository: docker.io/prodrigestivill/postgres-backup-local
-              tag: 16@sha256:e7182c0dac78540405e954597fcb3f4cfa67955d5df008152ab41ce166fe6014
+              tag: 17@sha256:483fa15ecd998302bd312fc380cb1b3683a940881d9099d6dfe65bcc1e2714e8
             envFrom: &envFrom
               - secretRef:
                   name: *app
             env:
               TZ: *tz
-              POSTGRES_HOST: postgres16-ro.database.svc.cluster.local
-              POSTGRES_DB: atuin,authelia,authentik,bazarr,gatus,grafana,jfstat,lidarr_log,lidarr_main,nextcloud,prowlarr_log,prowlarr_main,radarr_log,radarr_main,sonarr_log,sonarr_main
+              POSTGRES_HOST: postgres17-ro.database.svc.cluster.local
+              POSTGRES_DB: atuin,authentik,bazarr,gatus,grafana,jfstat,lidarr_log,lidarr_main,nextcloud,prowlarr_log,prowlarr_main,radarr_log,radarr_main,sonarr_log,sonarr_main
               BACKUP_KEEP_DAYS: 14
               BACKUP_KEEP_WEEKS: 2
               BACKUP_KEEP_MONTHS: 0
@@ -54,7 +54,9 @@ spec:
         cronjob: *cronjob
         containers:
           pgvectors-backup:
-            image: *image
+            image:
+              repository: docker.io/prodrigestivill/postgres-backup-local
+              tag: 16@sha256:e7182c0dac78540405e954597fcb3f4cfa67955d5df008152ab41ce166fe6014
             envFrom: *envFrom
             env:
               TZ: *tz
