--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -105,6 +105,6 @@ spec:
         server: ${SECRET_NAS_IP}
         path: ${SECRET_NFS_PATH_GAMES}
         globalMounts:
-          - path: /config/library
+          - path: /romm/library
       tmp:
         type: emptyDir
