--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -66,18 +66,18 @@ spec:
                 memory: 512Mi
               limits:
                 memory: 4Gi
-            securityContext:
-              allowPrivilegeEscalation: true
-              readOnlyRootFilesystem: false
-              capabilities: { drop: ["ALL"] }
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: &uid 5000
-        runAsGroup: *uid
-        fsGroup: *uid
-        fsGroupChangePolicy: OnRootMismatch
-        supplementalGroups: [3000]
+    #         securityContext:
+    #           allowPrivilegeEscalation: true
+    #           readOnlyRootFilesystem: false
+    #           capabilities: { drop: ["ALL"] }
+    # defaultPodOptions:
+    #   securityContext:
+    #     runAsNonRoot: true
+    #     runAsUser: &uid 5000
+    #     runAsGroup: *uid
+    #     fsGroup: *uid
+    #     fsGroupChangePolicy: OnRootMismatch
+    #     supplementalGroups: [3000]
     service:
       app:
         controller: *app
@@ -98,13 +98,13 @@ spec:
           - hosts:
               - *host
     persistence:
-      config:
-        type: configMap
-        name: romm-config
-        globalMounts:
-          - path: /romm/config/config.yml
-            subPath: config.yml
-            readOnly: true
+      # config:
+      #   type: configMap
+      #   name: romm-config
+      #   globalMounts:
+      #     - path: /romm/config/config.yml
+      #       subPath: config.yml
+      #       readOnly: true
       romm:
         existingClaim: ${VOLSYNC_CLAIM}
       games:
