--- a/.renovate/customManagers.json5
+++ b/.renovate/customManagers.json5
@@ -5,8 +5,8 @@
       customType: "regex",
       description: "Process annotated dependencies",
       managerFilePatterns: [
-        "(^|/).+\\.sh$",
-        "(^|/).+\\.ya?ml(?:\\.j2)?$",
+        "/(^|/).+\\.sh$/",
+        "/(^|/).+\\.ya?ml(?:\\.j2)?$/",
       ],
       matchStrings: [
         // # renovate: datasource=github-releases depName=k3s-io/k3s
@@ -25,7 +25,7 @@
     {
       customType: "regex",
       description: "Process any imageName keys in YAML files (cloudnative-pg)",
-      managerFilePatterns: ["(^|/)kubernetes/.+\\.ya?ml$"],
+      managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"],
       matchStrings: ["imageName: (?<depName>[^\\s:]+):(?<currentValue>\\S+)(@(?<currentDigest>sha256:\\S+)?)"],
       datasourceTemplate: "docker",
     },
