--- a/.renovaterc.json5
+++ b/.renovaterc.json5
@@ -31,12 +31,12 @@
     "**/resources/**"
   ],
   flux: {
-    managerFilePatterns: ["(^|/)kubernetes/.+\\.ya?ml$"]
+    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"]
   },
   "helm-values": {
-    managerFilePatterns: ["(^|/)kubernetes/.+\\.ya?ml$"]
+    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"]
   },
   kubernetes: {
-    managerFilePatterns: ["(^|/)kubernetes/.+\\.ya?ml$"]
+    managerFilePatterns: ["/(^|/)kubernetes/.+\\.ya?ml$/"]
   },
 }
