--- a/talos/patches/global/machine-sysctl.yaml
+++ b/talos/patches/global/machine-sysctl.yaml
@@ -2,9 +2,9 @@ machine:
   sysctls:
     fs.inotify.max_user_watches: "1048576" # Watchdog
     fs.inotify.max_user_instances: "8192"  # Watchdog
+    net.core.default_qdisc: fq             # 10Gb/s
     net.core.rmem_max: "67108864"          # 10Gb/s | Cloudflared | QUIC
     net.core.wmem_max: "67108864"          # 10Gb/s | Cloudflared | QUIC
-    net.core.default_qdisc: fq             # 10Gb/s
     net.ipv4.tcp_congestion_control: bbr   # 10Gb/s
     net.ipv4.tcp_fastopen: 3               # TCP Fast Open
     net.ipv4.tcp_mtu_probing: 1            # 10Gb/s | Jumbo frames
@@ -14,3 +14,4 @@ machine:
     sunrpc.tcp_slot_table_entries: 128     # 10Gb/s | NFS
     sunrpc.tcp_max_slot_table_entries: 128 # 10Gb/s | NFS
     user.max_user_namespaces: 11255        # User namespaces
+    vm.nr_hugepages: 1024                  # PostgreSQL
