--- a/kubernetes/apps/media/lidarr/app/externalsecret.yaml
+++ b/kubernetes/apps/media/lidarr/app/externalsecret.yaml
@@ -28,7 +28,7 @@ spec:
         INIT_POSTGRES_DBNAME: lidarr_main lidarr_log
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASSWORD }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
