--- a/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/externalsecret.yaml
@@ -35,7 +35,7 @@ spec:
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASSWORD }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
