--- a/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
     template:
       data:
         username: "{{ .POSTGRES_SUPER_USER }}"
-        password: "{{ .POSTGRES_SUPER_PASSWORDWORD }}"
+        password: "{{ .POSTGRES_SUPER_PASSWORD }}"
         S3_ACCESS_KEY_ID: "{{ .S3_ACCESS_KEY }}"
         S3_SECRET_ACCESS_KEY: "{{ .S3_SECRET_KEY }}"
       metadata:
