--- a/kubernetes/apps/database/cloudnative-pg/cluster/pg17-immich.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/pg17-immich.yaml
@@ -16,6 +16,7 @@ spec:
   superuserSecret:
     name: cloudnative-pg
   postgresql:
+    shared_preload_libraries: ["vchord.so"]
     parameters:
       autovacuum_vacuum_scale_factor: "0.1"
       autovacuum_analyze_scale_factor: "0.05"
