--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -143,7 +143,8 @@ spec:
         controller: *app
         ports:
           http:
-            port: *port
+            # port: *port
+            port: 2283
           metrics-api:
             port: 8081
           metrics-ms:
@@ -152,7 +153,8 @@ spec:
         controller: *app
         ports:
           http:
-            port: *mlPort
+            # port: *mlPort
+            port: 3003
     serviceMonitor:
       immich:
         serviceName: server
