--- a/kubernetes/apps/database/cloudnative-pg/cluster/pg17-cluster.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/pg17-cluster.yaml
@@ -27,7 +27,7 @@ spec:
       cpu: 200m
       memory: 1Gi
     limits:
-      hugepages-2Mi: 2Gi # Requires sysctl set on the host.
+      # hugepages-2Mi: 2Gi # Requires sysctl set on the host.
       memory: 2Gi
   monitoring:
     enablePodMonitor: true
