--- a/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./externalsecret.yaml
-  # - ./gatus.yaml
+  - ./gatus.yaml
   - ./objectstore.yaml
   - ./pg17-cluster.yaml
   - ./pg17-immich.yaml
