--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
   "explorer.autoReveal": false,
   "files.associations": {
     "*.json5": "json5",
+    "**/*.yaml.j2": "yaml"
   },
   "files.trimTrailingWhitespace": true,
   "material-icon-theme.files.associations": {
