--- a/kubernetes/apps/utilities/atuin/app/externalsecret.yaml
+++ b/kubernetes/apps/utilities/atuin/app/externalsecret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: &name atuin
+  name: atuin
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: *name
+    name: atuin-secret
     creationPolicy: Owner
     template:
       data:
