--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -7,27 +7,22 @@ tasks:
   apply-node:
     desc: Apply Talos config to a node [NODE=required] [MODE={{.MODE}}]
     cmd: |
-      minijinja-cli --define "machinetype={{.MACHINE_TYPE}}" {{.TALOS_DIR}}/machineconfig.yaml.j2 \
+      minijinja-cli {{.TALOS_DIR}}/{{.NODE}}.yaml.j2 \
         | op inject \
         | talosctl --nodes {{.NODE}} apply-config \
-          --mode {{.MODE}} \
-          --config-patch @{{.TALOS_DIR}}/{{.MACHINE_TYPE}}/{{.NODE}}.yaml \
-          --file /dev/stdin {{if .INSECURE}}--insecure{{end}}
+          --mode={{.MODE}} \
+          --file /dev/stdin {{if eq .INSECURE "true"}}--insecure{{end}}
     vars:
       MODE: '{{.MODE | default "auto"}}'
       INSECURE:
-        sh: talosctl --nodes {{.NODE}} get machineconfig &> /dev/null || echo true
-      MACHINE_TYPE:
-        sh: |-
-          talosctl --nodes {{.NODE}} get machinetypes --output=jsonpath='{.spec}' 2> /dev/null \
-            || basename $(find '{{.TALOS_DIR}}' -name '{{.NODE}}.yaml' -printf '%h')
+        sh: talosctl --nodes {{.NODE}} get machineconfig &> /dev/null && echo false || echo true
     requires:
       vars: [NODE]
     preconditions:
       - op user get --me
       - talosctl config info
-      - test -f {{.TALOS_DIR}}/machineconfig.yaml.j2
-      - test -f {{.TALOS_DIR}}/{{.MACHINE_TYPE}}/{{.NODE}}.yaml
+      - test -f {{.TALOS_DIR}}/{{.NODE}}.yaml.j2
+      - test -f {{.TALOS_DIR}}/schematic.yaml.j2
       - which minijinja-cli op talosctl
 
   upgrade-node:
