--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/ks.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/ks.yaml
@@ -39,7 +39,7 @@ spec:
     - name: actions-runner-controller
       namespace: *namespace
     - name: openebs
-      namespace: storage
+      namespace: openebs-system
   interval: 1h
   path: ./kubernetes/apps/actions-runner-system/actions-runner-controller/runners
   prune: true
