--- a/bootstrap/helmfile.d/01-apps.yaml
+++ b/bootstrap/helmfile.d/01-apps.yaml
@@ -13,6 +13,19 @@ releases:
     version: 1.18.1
     values:
       - ./templates/values.yaml.gotmpl
+    hooks:
+      - # Advertise Kube API VIP
+        events:
+          - 'postsync'
+        command: kubectl
+        args:
+          - apply
+          - --server-side
+          - --namespace=kube-system
+          - --field-manager=kustomize-controller
+          - --kustomize
+          - ../../kubernetes/apps/kube-system/cilium/config
+        showlogs: true
 
   - name: coredns
     namespace: kube-system
