--- a/kubernetes/apps/games/romm/app/helmrelease.yaml
+++ b/kubernetes/apps/games/romm/app/helmrelease.yaml
@@ -36,20 +36,22 @@ spec:
               tag: 4.2.0@sha256:7750c09db727c0b4d9225fea518dcef94142e7d2b2dbcfb451e904e66a05f8ec
             env:
               TZ: ${CONFIG_TIMEZONE}
-              HASHEOUS_API_ENABLED: true
-              PLAYMATCH_API_ENABLED: true
               # Used for Tinfoil Integration. For more information, see https://docs.romm.app/latest/Integrations/Tinfoil-integration/?h=disable_download_endpoint_auth
               DISABLE_DOWNLOAD_ENDPOINT_AUTH: true
               # Only set to true after first run and admin has been created.
               DISABLE_USERPASS_LOGIN: false
-              ENABLE_SCHEDULED_RESCAN: true
-              SCHEDULED_RESCAN_CRON: "0 2 * * *"
               ENABLE_RESCAN_ON_FILESYSTEM_CHANGE: true
-              RESCAN_ON_FILESYSTEM_CHANGE_DELAY: 5
-              ROMM_DB_DRIVER: postgresql
+              ENABLE_SCHEDULED_CONVERT_IMAGES_TO_WEBP: true
+              ENABLE_SCHEDULED_RESCAN: true
+              HASHEOUS_API_ENABLED: true
+              PLAYMATCH_API_ENABLED: true
               REDIS_HOST: dragonfly.database.svc.cluster.local
               REDIS_PORT: 6379
               REDIS_DB: 4
+              RESCAN_ON_FILESYSTEM_CHANGE_DELAY: 5
+              ROMM_DB_DRIVER: postgresql
+              SCHEDULED_RESCAN_CRON: "0 2 * * *"
+              TASK_TIMEOUT: 3600
             envFrom: *envFrom
             probes:
               liveness: &probes
