--- a/kubernetes/apps/kube-system/nvidia-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/nvidia-device-plugin/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app nvidia-device-plugin
-  namespace: &namespace system
+  namespace: &namespace kube-system
 spec:
   commonMetadata:
     labels:
@@ -13,7 +13,7 @@ spec:
     - name: node-feature-discovery
       namespace: *namespace
   interval: 1h
-  path: ./kubernetes/apps/system/nvidia-device-plugin/app
+  path: ./kubernetes/apps/kube-system/nvidia-device-plugin/app
   prune: true
   retryInterval: 2m
   sourceRef:
@@ -22,4 +22,3 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 5m
-  wait: false
