--- a/kubernetes/apps/kube-system/nvidia-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/nvidia-device-plugin/ks.yaml
@@ -11,7 +11,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: node-feature-discovery
-      namespace: *namespace
+      namespace: system
   interval: 1h
   path: ./kubernetes/apps/kube-system/nvidia-device-plugin/app
   prune: true
