--- a/kubernetes/apps/kube-system/generic-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/generic-device-plugin/ks.yaml
@@ -4,16 +4,16 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app generic-device-plugin
-  namespace: &namespace system
+  namespace: &namespace kube-system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: node-feature-discovery-rules
-      namespace: *namespace
+      namespace: system
   interval: 1h
-  path: ./kubernetes/apps/system/generic-device-plugin/app
+  path: ./kubernetes/apps/kube-system/generic-device-plugin/app
   prune: true
   retryInterval: 2m
   sourceRef:
