--- a/kubernetes/apps/observability/exporters/kustomization.yaml
+++ b/kubernetes/apps/observability/exporters/kustomization.yaml
@@ -3,11 +3,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./bazarr-exporter/ks.yaml
+  # - ./bazarr-exporter/ks.yaml
   - ./blackbox-exporter/ks.yaml
   - ./dcgm-exporter/ks.yaml
-  - ./lidarr-exporter/ks.yaml
-  - ./prowlarr-exporter/ks.yaml
-  - ./qbittorrent-exporter/ks.yaml
-  - ./radarr-exporter/ks.yaml
-  - ./sonarr-exporter/ks.yaml
+  # - ./lidarr-exporter/ks.yaml
+  # - ./prowlarr-exporter/ks.yaml
+  # - ./qbittorrent-exporter/ks.yaml
+  # - ./radarr-exporter/ks.yaml
+  # - ./sonarr-exporter/ks.yaml
