--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -11,9 +11,9 @@ resources:
   - ./exporters
   - ./gatus/ks.yaml
   - ./grafana/ks.yaml
-  # - ./headlamp/ks.yaml
+  - ./headlamp/ks.yaml
   - ./kromgo/ks.yaml
-  # - ./kube-prometheus-stack/ks.yaml
-  # - ./loki/ks.yaml
+  - ./kube-prometheus-stack/ks.yaml
+  - ./loki/ks.yaml
   - ./silence-operator/ks.yaml
   - ./unpoller/ks.yaml
