--- a/kubernetes/apps/network/external-dns/unifi/prometheusrule.yaml
+++ b/kubernetes/apps/network/external-dns/unifi/prometheusrule.yaml
@@ -3,12 +3,12 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: external-dns-cloudflare
+  name: external-dns-unifi
 spec:
   groups:
-    - name: external-dns-cloudflare.rules
+    - name: external-dns-unifi.rules
       rules:
-        - alert: ExternalDNSCloudflareStale
+        - alert: ExternalDNSUnifiStale
           expr: |-
             time() - external_dns_controller_last_sync_timestamp_seconds{job="external-dns-cloudflare"} > 60
           for: 5m
